--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
-  }
+  },
+  "homepage": "https://isaka1022.github.io/saharasabaka"
 }
