--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saharasabaka",
+  "name": "サハラサバカ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -53,5 +53,5 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
   },
-  "homepage": "https://isaka1022.github.io/saharasabaka"
+  "homepage": "/saharasabaka"
 }
