Routerの使い方を変更

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/saharasabaka"
-    },
-    {
-      "source": "/saharasabaka/(.*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
