サイト表記を修正

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SAHARA SABAKA",
-  "name": "SAHARA SABAKA - サハラマラソンへの挑戦",
+  "short_name": "サハラサバカ",
+  "name": "サハラサバカ - サハラマラソンへの挑戦",
   "icons": [
     {
       "src": "favicon.ico",
