--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "i18next": "^22.5.1",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^12.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.15",
