--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "5.0.1",
     "swiper": "^11.1.15",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yocto-queue": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
