Add Vercel install command with legacy-peer-deps for React 19 compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,7 @@
       ]
     }
   ],
+  "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app"
